# RiskAnalysis_NKMeths

./: README.md  pyproject.toml  바이두지수를 활용한 북한발 마약 유통 위험도 측정  바이두지수를 활용한 북한발 마약 유통 위험도 측정.md
regression/: DTW.ipynb  KR_MethSeizure_preprocessed.csv  WTLCC.ipynb  regression.csv  regression.ipynb  regression_최종.py  result.csv  stationary_test.ipynb  stationary_test_2.ipynb  test.ipynb  to_stationary.py  tvdml_results.csv  tvdml_results_with_risk_hac.csv  최종.ipynb
대검찰청/: KR_agg_MethSeizure_preprocess.ipynb  KR_agg_MethSeizure_문의후수정.xlsx  makecsv.ipynb
홍콩/: HK External Merchandise Trade Statistics - Total Exports to Ten Main Destinations.csv  HK External Merchandise Trade Statistics - Total Exports to Ten Main Destinations_foruse.csv  HK_exports_to_korea_preprocessed.csv  backup HK External Merchandise Trade Statistics - Total Exports to Ten Main Destinations backup.csv  preprocess.ipynb  test.ipynb
