[project]
name = "myproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "selenium (>=4.34.2,<5.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"